Edit style + logging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,12 @@
     "cSpell.words": [
         "astype",
         "Ifft",
+        "ndim",
         "pygame",
         "pyshine",
         "qlineargradient",
+        "rfft",
+        "rfftfreq",
         "sndarray",
         "wavfile"
     ]
